--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1190,3 +1190,52 @@ DOI: 10.1007/11840541_68},
   langid = {english},
   keywords = {real-time-mde}
 }
+@online{niculescuUltraLightweightCollaborativeMapping2024,
+  title = {Ultra-{{Lightweight Collaborative Mapping}} for {{Robot Swarms}}},
+  author = {Niculescu, Vlad and Polonelli, Tommaso and Magno, Michele and Benini, Luca},
+  date = {2024-08-26},
+  eprint = {2407.03136},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2407.03136},
+  url = {http://arxiv.org/abs/2407.03136},
+  urldate = {2025-05-25},
+  abstract = {A key requirement in robotics is the ability to simultaneously self-localize and map a previously unknown environment, relying primarily on onboard sensing and computation. Achieving fully onboard accurate simultaneous localization and mapping (SLAM) is feasible for high-end robotic platforms, whereas small and inexpensive robots face challenges due to constrained hardware, therefore frequently resorting to external infrastructure for sensing and computation. The challenge is further exacerbated in swarms of robots, where coordination, scalability, and latency are crucial concerns. This work introduces a decentralized and lightweight collaborative SLAM approach that enables mapping on virtually any robot, even those equipped with low-cost hardware and only 1.5 MB of memory, including miniaturized insect-size devices. Moreover, the proposed solution supports large swarm formations with the capability to coordinate hundreds of agents. To substantiate our claims, we have successfully implemented collaborative SLAM on centimeter-size drones weighing 46 g. Remarkably, we achieve a mapping accuracy below 30 cm, a result comparable to highend state-of-the-art solutions while reducing the cost, memory, and computation requirements by two orders of magnitude. Our approach is innovative in three main aspects. First, it enables onboard infrastructure-less collaborative mapping with a lightweight and cost-effective (\$20) solution in terms of sensing and computation. Second, we optimize the data traffic within the swarm to support hundreds of cooperative agents using standard wireless protocols such as ultra-wideband (UWB), Bluetooth, or WiFi. Last, we implement a distributed swarm coordination policy to decrease mapping latency and enhance accuracy.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Robotics}
+}
+@article{rajapakshaDeepLearningbasedDepth2024,
+  title = {Deep {{Learning-based Depth Estimation Methods}} from {{Monocular Image}} and {{Videos}}: {{A Comprehensive Survey}}},
+  shorttitle = {Deep {{Learning-based Depth Estimation Methods}} from {{Monocular Image}} and {{Videos}}},
+  author = {Rajapaksha, Uchitha and Sohel, Ferdous and Laga, Hamid and Diepeveen, Dean and Bennamoun, Mohammed},
+  date = {2024-12-31},
+  journaltitle = {ACM Computing Surveys},
+  shortjournal = {ACM Comput. Surv.},
+  volume = {56},
+  number = {12},
+  pages = {1--51},
+  issn = {0360-0300, 1557-7341},
+  doi = {10.1145/3677327},
+  url = {https://dl.acm.org/doi/10.1145/3677327},
+  urldate = {2025-01-07},
+  abstract = {Estimating depth from single RGB images and videos is of widespread interest due to its applications in many areas, including autonomous driving, 3D reconstruction, digital entertainment, and robotics. More than 500 deep learning-based papers have been published in the past 10 years, which indicates the growing interest in the task. This paper presents a comprehensive survey of the existing deep learning-based methods, the challenges they address, and how they have evolved in their architecture and supervision methods. It provides a taxonomy for classifying the current work based on their input and output modalities, network architectures, and learning methods. It also discusses the major milestones in the history of monocular depth estimation, and different pipelines, datasets, and evaluation metrics used in existing methods.},
+  langid = {english},
+  keywords = {✨,📌}
+}
+@article{wangWhatMakesUnsupervised2022,
+  title = {What Makes the Unsupervised Monocular Depth Estimation ({{UMDE}}) Model Training Better},
+  author = {Wang, Xiangtong and Liang, Binbin and Yang, Menglong and Li, Wei},
+  date = {2022-12-20},
+  journaltitle = {Scientific Reports},
+  shortjournal = {Sci Rep},
+  volume = {12},
+  number = {1},
+  pages = {21999},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-022-26613-0},
+  url = {https://www.nature.com/articles/s41598-022-26613-0},
+  urldate = {2025-05-25},
+  abstract = {Abstract             Current computer vision tasks based on deep learning require a huge amount of data with annotations for model training or testing, especially in some dense estimation tasks, such as optical flow segmentation and depth estimation. In practice, manual labeling for dense estimation tasks is very difficult or even impossible, and the scenes of the dataset are often restricted to a small range, which dramatically limits the development of the community. To overcome this deficiency, we propose a synthetic dataset generation method to obtain the expandable dataset without burdensome manual workforce. By this method, we construct a dataset called MineNavi containing video footages from first-perspective-view of the aircraft matched with accurate ground truth for depth estimation in aircraft navigation application. We also provide quantitative experiments to prove that pre-training via our MineNavi dataset can improve the performance of depth estimation model and speed up the convergence of the model on real scene data. Since the synthetic dataset has a similar effect to the real-world dataset in the training process of deep model, we finally conduct the experiments on MineNavi with unsupervised monocular depth estimation (UMDE) deep learning models to demonstrate the impact of various factors in our dataset such as lighting conditions and motion mode, aiming to explore what makes this kind of models training better.},
+  langid = {english}
+}
