--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -36,8 +36,8 @@ Content Outline:
 
 Intermediate - Tooling
 - Introduction to RVIZ
+- TF tree and Transformations with TF2
 - [Robot model description formats](ros2-description)
-- Transformations with TF2
 - [Introduction to Gazebo](ros2-gazebo)
 - Building sim environment in Gazebo
 - Gazebo plugins ecosystem
@@ -47,6 +47,14 @@ Intermediate - Tooling
 - Advanced subjects on nodes
 - [Security](ros2-security)
 - [Multi-agent](ros2-multi-agent)
+
+## Extras
+
+- Robot Manipulation with MoveIt
+- Navigation with Nav2
+- Computer vision integration with ROS (best practices)
+- PlanSys2 ?
+- BehaviorTree.CPP with ROS2 ?
 
 ## ROS 2 Control
 
