update on probability

--- a/src/content/docs/en/probability.mdx
+++ b/src/content/docs/en/probability.mdx
@@ -351,6 +351,8 @@ Just an arbitrary example:
 
 Do you see the problem with the probability measure?
 
+## Conditional Probability and Independence
+
 ## Random Variable
 
 For this section, I spent a considerable amount of time looking for an intuition, idea, example to motivate discussion and the importance of random variable. Clearly it is a fundamental concept in probability but most resources focus on the formal definition, and leave a little bit aside the intuition: Why do we need this and why is it important?, At least for me, given my limitations, it was difficult to justify its role and connection beyond simply referencing the definitions "by hard".
@@ -414,6 +416,8 @@ General setting:
 
 - "In this example, the identity of the box that will be chosen is a random variable, which we shall denote by B." @bishopPatternRecognitionMachine2006 section 1.2 already assume you know what a random variable is.
 - "Because the values of these variables can vary from one person to another in a way that is generally unknown, they are called random variables or stochastic variables."  @bishopDeepLearningFoundations2024 section 2.1.2
+
+Get the table comparing $r.v.$ notation with integral notation [Random Variables and Measurable Functions](http://theanalysisofdata.com/probability/2_5.html)
 
 ## Distribution
 
