--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -51,6 +51,7 @@ General Robotic Simulators surveys:
 
 Aerial robotics:
 - @dimmigSurveySimulatorsAerial2023
+- @nikolaievComparativeReviewDrone2024
 
 Underwater:
 - @aldhaheriUnderwaterRoboticSimulators2025
