--- a/src/content/docs/en/color.mdx
+++ b/src/content/docs/en/color.mdx
@@ -3,7 +3,7 @@ title: Colorimetry
 describe: A walk on the world of colors
 ---
 
-"The eye is not a linear system"
+"The eye is not a linear system". Pierro
 
 ## External Resources
 
