--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1239,3 +1239,46 @@ DOI: 10.1007/11840541_68},
   abstract = {Abstract             Current computer vision tasks based on deep learning require a huge amount of data with annotations for model training or testing, especially in some dense estimation tasks, such as optical flow segmentation and depth estimation. In practice, manual labeling for dense estimation tasks is very difficult or even impossible, and the scenes of the dataset are often restricted to a small range, which dramatically limits the development of the community. To overcome this deficiency, we propose a synthetic dataset generation method to obtain the expandable dataset without burdensome manual workforce. By this method, we construct a dataset called MineNavi containing video footages from first-perspective-view of the aircraft matched with accurate ground truth for depth estimation in aircraft navigation application. We also provide quantitative experiments to prove that pre-training via our MineNavi dataset can improve the performance of depth estimation model and speed up the convergence of the model on real scene data. Since the synthetic dataset has a similar effect to the real-world dataset in the training process of deep model, we finally conduct the experiments on MineNavi with unsupervised monocular depth estimation (UMDE) deep learning models to demonstrate the impact of various factors in our dataset such as lighting conditions and motion mode, aiming to explore what makes this kind of models training better.},
   langid = {english}
 }
+@book{hamannSwarmRoboticsFormal2018,
+  title = {Swarm {{Robotics}}: {{A Formal Approach}}},
+  shorttitle = {Swarm {{Robotics}}},
+  author = {Hamann, Heiko},
+  date = {2018},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-319-74528-2},
+  url = {http://link.springer.com/10.1007/978-3-319-74528-2},
+  urldate = {2025-07-05},
+  isbn = {978-3-319-74526-8 978-3-319-74528-2},
+  langid = {english}
+}
+@book{baranReliableDigitalCommunications1960,
+  title = {Reliable Digital Communications Systems Using Unreliable Network Repeater Nodes},
+  author = {Baran, Paul},
+  date = {1960},
+  publisher = {RAND Corporation},
+  location = {Santa Monica, CA}
+}
+@article{lermanMathematicalModelForaging2002,
+  title = {Mathematical {{Model}} of {{Foraging}} in a {{Group}} of {{Robots}}: {{Effect}} of {{Interference}}},
+  shorttitle = {Mathematical {{Model}} of {{Foraging}} in a {{Group}} of {{Robots}}},
+  author = {Lerman, Kristina and Galstyan, Aram},
+  date = {2002-09},
+  journaltitle = {Autonomous Robots},
+  shortjournal = {Autonomous Robots},
+  volume = {13},
+  number = {2},
+  pages = {127--141},
+  issn = {0929-5593, 1573-7527},
+  doi = {10.1023/A:1019633424543},
+  url = {https://link.springer.com/10.1023/A:1019633424543},
+  urldate = {2025-07-05},
+  langid = {english}
+}
+@inproceedings{guntherSimpleCapacityModel1993,
+  title = {A Simple Capacity Model of Massively Parallel Transaction Systems},
+  booktitle = {Int. {{CMG}} Conference},
+  author = {Gunther, Neil J.},
+  date = {1993},
+  url = {https://api.semanticscholar.org/CorpusID:9693265}
+}
