--- a/src/content/docs/en/drones-principles.mdx
+++ b/src/content/docs/en/drones-principles.mdx
@@ -52,6 +52,18 @@ Let's officially call this force produced by the drone **thrust**.
     description=""
 />
 
+Now that we are clear about what needs to be done for a drone to fly, the question is how? Or with what?
+
+<Drawio
+    file="drones-principles.drawio"
+    page="1"
+    description="Source of thrust in a drone"
+/>
+
+It seems we have found the components responsible for generating thrust in a drone: motor + propeller. But the main question still remains, and is how? 
+
+But don't worry, in the next section we will dissect all the details of how these components work together to generate thrust.
+
 ## Momentum theory
 
 Also called Actuator Disk Theory (ADT)
